# THU-Media-Computing

./: .gitignore  CMakeLists.txt  README.md  img_completion.cpp  img_completion.h  img_compositing.h  img_matting.h  img_resizing.cpp  main.cpp  transfer_color.cpp
cppcore/: CMakeLists.txt  img_compositing.cpp  img_compositing.h  img_matting.cpp  img_proc.cpp  img_proc.h  img_resizing.h  img_video_edit_v1.cpp  img_video_edit_v1.h  img_video_edit_v2.cpp  img_video_edit_v2.h  library.h  main.cpp  transfer_color.h
